--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <title>Budgetify</title>
+        <title>Expense-Tracker</title>
         <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
     </head>
     <body>
